# cj

./: .gitignore  CLAUDE.md  LICENSE  README.md  cj  pyproject.toml  setup.py
cj/: __init__.py
cjlib/: __main__.py  browser_bridge.py  claude.py  cli.py  config.py  container.py  namegen.py  setup.py  shell.py  update.py
spec/: 002-browser.md  003-defaultClaude.md  plan.md  spec.md
tests/: __init__.py  conftest.py  test_browser_bridge.py  test_claude.py  test_cli.py  test_config.py  test_container.py  test_extra_packages.py  test_integration_browser.py  test_namegen.py  test_setup.py  test_shell.py  test_update.py
